Implemented GetFingerPaths()
