# handlers/handlers.go
@@ -1,6 +1,9 @@
 package handlers
 
 import (
+	"log"
+
+	"github.com/Easprey/whiteboard-server/models"
 	"github.com/Easprey/whiteboard-server/restapi/operations"
 	"github.com/go-openapi/runtime/middleware"
 )
@@ -14,7 +17,50 @@ import (
 
 func GetFingerPaths(db *DataBase) func(operations.FingerPathsGetParams) middleware.Responder {
 	return func(params operations.FingerPathsGetParams) middleware.Responder {
-		return middleware.NotImplemented("operation operations.FingerPathsGet has not yet been implemented")
+		// create response object
+		r := operations.NewFingerPathsGetOK()
+
+		// query the database
+		q := "SELECT fingerpaths.path_id, path_color, board_color, dash, blur, clear, " +
+			"user_id, x, y FROM fingerpaths INNER JOIN fingerpoints WHERE board = 'test' AND " +
+			"fingerpaths.path_id = fingerpoints.path_id"
+		rows, err := db.Query(q)
+		if err != nil {
+			log.Fatal(err) // TODO: return server error
+		}
+		defer rows.Close()
+
+		var lastPath models.FingerPath
+		for rows.Next() {
+			// read row data into local path and point
+			var path models.FingerPath
+			var point models.FingerPoint
+			err := rows.Scan(&path.PathID, &path.PathColor, &path.BoardColor, &path.Dash, &path.Blur,
+				&path.Clear, &path.UserID, &point.X, &point.Y)
+			if err != nil {
+				log.Fatal(err) // TODO: return server error
+			}
+
+			if path.PathID == lastPath.PathID {
+				// simply append point to lastPath if it is an extension of lastPath
+				lastPath.FingerPoints = append(lastPath.FingerPoints, &point)
+			} else {
+				// r.Payload expects a *FingerPath
+				// cannot provide &lastPath, because &lastPath changes with each new found path
+				// copy lastPath into new savePath struct and pass &savePath instead
+				savePath := lastPath
+				r.Payload = append(r.Payload, &savePath)
+				// "reset" lastPath and append point
+				lastPath = path
+				lastPath.FingerPoints = append(path.FingerPoints, &point)
+			}
+		}
+
+		// handle the final lastPath, which the loop structure above does not append to Payload
+		savePath := lastPath
+		r.Payload = append(r.Payload, &savePath)
+
+		return r
 	}
 }
 
